# capsule-telegram

./: .gitignore  Capsule.toml  Cargo.toml  README.md
src/: format.rs  lib.rs  telegram.rs  types.rs
