[package]
name = "astrid-capsule-telegram"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Telegram Bot uplink capsule for Astrid OS"

[lib]
crate-type = ["cdylib"]

[dependencies]
astrid-sdk = { version = "0.5.3", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
extism-pdk = "1.4.1"
regex = "1"

[profile.release]
codegen-units = 1
lto = true
strip = true
